# distilp

./: .gitignore  Makefile  README.md  __init__.py  gurobi_solver.py  gurobi_solver_m.py  gurobi_solver_n.py  main.py  pyproject.toml  scipy_solver.py
components/: dataclasses.py  gurobi_loader.py
profiles/: device_profile_mac_m1_max.json  device_profile_mac_m4.json  model_profile.json  model_profile_qwen3_32b_8bit.json
profiles/gpt_oss_20b/: m4_gpt_oss_20b.json  model_profile.json
profiles/hermes_70b/: m1_max_hermes_70B.json  m1_pro_max_hermes4_70b.json  m3_hermes4_70b.json  m4_hermes_70b.json  model_profile.json
profiles/qwen3_32b/6bit/: m1_pro_max_qwen32b_6bit.json  m3_qwen32b_6bit.json  m4_qwen3_32b_6bit.json  model_profile.json
profiles/qwen3_32b/8bit/: m1_max_qwen32b_8bit.json  m3_qwen32b_8bit.json  m4_qwen3_32b_8bit.json  model_profile.json
profiles/qwen3_32b/bf16/: dnet_kais.json  m3_qwen32b_bf16.json  model_profile.json
profiles/qwen3_32b/fp16/: model_profile.json
src/cli/: profiler.py  solver.py
src/distilp/: __init__.py  halda_p_solver.py  scipy_solver.py
src/distilp/common/: __init__.py  device.py  model.py  types.py
src/distilp/components/: dataclasses.py  dense_common.py  loader.py  plotter.py
src/distilp/profiler/: __init__.py  api.py  datatypes.py  models.py  profiler.py
src/distilp/profiler/parsers/: __init__.py  meta.py  mlx.py
src/distilp/profiler/profiler/: device.py  model.py
src/distilp/solver/: __init__.py  halda_p_solver.py
src/distilp/solver/components/: dataclasses.py  dense_common.py  loader.py  plotter.py
src/dsolver/: __init__.py  gurobi_solver.py  scipy_solver.py
src/dsolver/components/: dataclasses.py  dense_common.py  gurobi_loader.py  plotter.py
test/: test_integration.py  test_models.py
test/profiles/hermes_70b/: m1_max_hermes_70B.json  m3_air.json  m3_hermes_70b.json  m4_hermes_70b.json  model_profile.json
test/profiles/llama_3_70b/4bit/: m3_air.json  mac_mini.json  mac_pro.json  model_profile.json
test/profiles/llama_3_70b/online/: m1.json  m2.json  model_profile.json
test/profiles/qwen3_32b/6bit/: m1_max_qwen32b_6bit.json  m3_qwen32b_6bit.json  m4_qwen3_32b_6bit.json  model_profile.json
test/profiles/qwen3_32b/8bit/: m1_max_qwen32b_8bit.json  m1_max_qwen32b_8bit_2.json  m4_qwen3_32b_8bit.json  mini_device_profile.json  model_profile.json  pro_device_profile.json
test/profiles/qwen3_32b/bf16/: m1_max_qwen32b_bf16.json  m3_air.json  model_profile.json
test/profiles/qwen3_4b/8bit/: model_profile.json
