[project]
name = "distilp"
version = "0.1.3"
description = "distilp: A Python library for MILP-based layer/expert assignment for distributed inference across heterogeneous devices"
authors = [
  { name = "andthattoo", email = "omer@dria.co" },
  { name = "Mehmet Uzunosmanoğlu", email = "mehmetu@firstbatch.xyz" },
]
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.10.6", "numpy>=2.3.2", "scipy>=1.16.1"]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
